# speckify

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  tasks.md
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: codeql.yml  test.yml
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
demo/it-systems-inventory-v2/: README.md
demo/loyalty-platform/: README.md
demo/loyalty-platform-v2/: README.md
docs/: decomposition-and-validation-rules.md  delivery-issue-ready-gates.md  github-speckit-constitution.md  input-contract-and-schemas.md  output-artifacts-and-issue-rendering.md  reversibility-and-feedback-flow.md  rupify-downstream-contract.md  rupify-upstream-note.md  speckify-design-note.md
fixtures/: README.md
fixtures/rendered-issues/: README.md
fixtures/review/: README.md  it-systems-inventory-v2-delivery-readiness.json  (+9 more)
rules/: README.md  decomposition-rules.json
schemas/: README.md  implementation-unit.schema.json  planning-bundle.schema.json  source-anchor.schema.json  verification-unit.schema.json
tests/: __init__.py  test_bundle_generation.py  test_constitution_check.py  test_delivery_export.py  test_delivery_quality.py  test_generated_validation.py  test_it_systems_inventory_v2_regression.py  test_loyalty_platform_regression.py  test_rendering.py  test_review_fixtures.py  test_round_trip_feedback.py  test_rupify_handoff_demo.py  test_rupify_import.py  test_validation.py
(+346 files in other folders)
