[project]
name = "speckify"
version = "0.1.0"
description = "Validation and planning artifacts for Speckify."
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.23.0",
]

[project.scripts]
speckify-validate-bundle = "speckify_tools.validate_bundle_cli:main"
speckify-validate-generated-bundle = "speckify_tools.validate_generated_bundle_cli:main"
speckify-demo-rupify-handoff = "speckify_tools.rupify_handoff_demo_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
